<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv show</string>
    <string name="poster">Image poster</string>
    <string name="title">Title</string>
    <string name="release_date">Release date : %s</string>
    <string name="btn_share">Button share</string>
    <string name="btn_open">Button open homepage</string>
    <string name="link">Open Link %s</string>
...
